--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="jumbotron">
-     <img src="/assets/css/burger_design-01.png" width="300" alt="burger" style="display: block; margin-left: auto; margin-right: auto;" />
-    <h1>BURGER JOINT</h1>       
+     <img src="/assets/images/front_burger.jpg" width="300" alt="burger" style="display: block; margin-left: auto; margin-right: auto;" />
+    <h1>HOT BUNNS</h1>       
   </div>
 
   <div class="container intro">
